// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonSnapshot should render Button without onClick 1`] = `
<DocumentFragment>
  <button
    class="sc-bczRLJ ghNxvj"
    type="button"
  >
    children
  </button>
</DocumentFragment>
`;

exports[`ButtonSnapshot should render Button without onClick 2`] = `
<DocumentFragment>
  <button
    class="sc-bczRLJ sc-gsnTZi ghNxvj lbztMZ"
    type="button"
  >
    children
  </button>
</DocumentFragment>
`;

exports[`ButtonSnapshot should render Button without onClick 3`] = `
<DocumentFragment>
  <button
    class="sc-bczRLJ ghNxvj"
    type="button"
  >
    children
  </button>
</DocumentFragment>
`;

exports[`ButtonSnapshot should render normal Button 1`] = `
<DocumentFragment>
  <button
    class="sc-bczRLJ ghNxvj"
    type="button"
  >
    children
  </button>
</DocumentFragment>
`;

exports[`ButtonSnapshot should render normal Button 2`] = `
<DocumentFragment>
  <button
    class="sc-bczRLJ sc-gsnTZi ghNxvj lbztMZ"
    type="button"
  >
    children
  </button>
</DocumentFragment>
`;

exports[`ButtonSnapshot should render normal Button 3`] = `
<DocumentFragment>
  <button
    class="sc-bczRLJ ghNxvj"
    type="button"
  >
    children
  </button>
</DocumentFragment>
`;
